--- a/data/sample.fxml
+++ b/data/sample.fxml
@@ -21,7 +21,7 @@
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
           <items>
-            <MenuItem mnemonicParsing="false" text="IJAProject" />
+            <MenuItem mnemonicParsing="false" text="About ija-app" onAction="#handleHelpButtonAction" />
           </items>
         </Menu>
       </menus>
