--- a/data/sample.fxml
+++ b/data/sample.fxml
@@ -28,8 +28,8 @@
     </MenuBar>
     <AnchorPane onMouseClicked="#onClickEvent" prefHeight="425.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
       <children>
-            <Rectangle id="pozadi" arcHeight="5.0" arcWidth="5.0" fill="#a8d5ff" height="400.0" stroke="#a8d5ff" strokeType="INSIDE" width="640.0" />
-        <Label id="napis" alignment="CENTER" layoutX="266.0" layoutY="359.0" opacity="0.69" style="&#10;" text="ALPHA BUILD" textAlignment="CENTER" textFill="#9f9f9f">
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#a8d5ff" height="400.0" stroke="#a8d5ff" strokeType="INSIDE" width="640.0" />
+        <Label id="null" alignment="CENTER" layoutX="266.0" layoutY="359.0" opacity="0.69" style="&#10;" text="ALPHA BUILD" textAlignment="CENTER" textFill="#9f9f9f">
           <font>
             <Font size="18.0" />
           </font>
@@ -195,18 +195,18 @@
             <Rectangle id="7p7" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="564.0" layoutY="252.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
             <Rectangle id="7p8" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="564.0" layoutY="277.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
             <Rectangle id="7p9" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="564.0" layoutY="302.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="84.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="16.0" layoutX="84.0" layoutY="346.0" stroke="#59afff" strokeType="INSIDE" width="471.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="149.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="213.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="283.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="16.0" layoutX="84.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="471.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="16.0" layoutX="84.0" layoutY="172.0" stroke="#59afff" strokeType="INSIDE" width="471.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="344.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="409.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="475.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="cesta" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="540.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="vydej" arcHeight="5.0" arcWidth="5.0" fill="#ffdf85" height="27.0" layoutX="82.0" layoutY="362.0" stroke="BLACK" strokeType="INSIDE" width="68.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="84.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="16.0" layoutX="84.0" layoutY="346.0" stroke="#59afff" strokeType="INSIDE" width="471.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="149.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="213.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="283.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="16.0" layoutX="84.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="471.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="16.0" layoutX="84.0" layoutY="172.0" stroke="#59afff" strokeType="INSIDE" width="471.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="344.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="409.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="475.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="540.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#ffdf85" height="27.0" layoutX="82.0" layoutY="362.0" stroke="BLACK" strokeType="INSIDE" width="68.0" />
       </children>
     </AnchorPane>
   </children>
