zobrazuje polozky v regalu dle vstupu

--- a/data/sample.fxml
+++ b/data/sample.fxml
@@ -30,26 +30,26 @@
       <children>
             <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#a8d5ff" height="400.0" stroke="#a8d5ff" strokeType="INSIDE" width="640.0" />
             <Group layoutX="14.0" layoutY="14.0" />
-            <Rectangle id="0l0" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="36.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0l1" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="61.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0l2" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="86.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0l3" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="111.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0l4" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0l5" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="202.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0l6" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="227.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0l7" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="252.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0l8" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="277.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0l9" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="302.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p0" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="36.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p1" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="61.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p2" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="86.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p3" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="111.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p4" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p5" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="202.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p6" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="227.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p7" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="252.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p8" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="277.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
-            <Rectangle id="0p9" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="302.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle fx:id="1" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="36.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="2" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="61.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="3" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="86.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="4" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="111.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="5" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="6" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="202.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="7" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="227.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="8" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="252.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="9" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="277.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="10" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="60.0" layoutY="302.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="11" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="36.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="12" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="61.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="13" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="86.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="14" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="111.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="15" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="16" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="202.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="17" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="227.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="18" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="252.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="19" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="277.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
+            <Rectangle id="20" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="108.0" layoutY="302.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
             <Rectangle id="1l0" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="124.0" layoutY="36.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
             <Rectangle id="1l1" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="124.0" layoutY="61.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
             <Rectangle id="1l2" arcHeight="5.0" arcWidth="5.0" fill="#f5b235" height="25.0" layoutX="124.0" layoutY="86.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
