--- a/data/sample.fxml
+++ b/data/sample.fxml
@@ -211,7 +211,7 @@
                   <Button id="null" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="5" />
               </items>
             </ToolBar>
-            <Button id="null" layoutX="556.0" layoutY="367.0" mnemonicParsing="false" text="RESET" />
+            <Button id="null" layoutX="556.0" layoutY="367.0" mnemonicParsing="false" onMouseClicked="#handleResetButton" text="RESET" />
             <ToolBar id="null" layoutX="15.0" layoutY="362.0" prefHeight="35.0" prefWidth="96.0">
                <items>
                   <Button id="null" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="1" />
