--- a/data/sample.fxml
+++ b/data/sample.fxml
@@ -202,6 +202,7 @@
             <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="475.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
             <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#59afff" height="348.0" layoutX="540.0" layoutY="14.0" stroke="#59afff" strokeType="INSIDE" width="16.0" />
             <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="#ffdf85" height="27.0" layoutX="75.0" layoutY="1.0" stroke="BLACK" strokeType="INSIDE" width="34.0" />
+            <Rectangle id="null" arcHeight="5.0" arcWidth="5.0" fill="red" height="20.0" layoutX="100.0" layoutY="12.0" stroke="BLACK" strokeType="INSIDE" width="20.0" />
             <ToolBar id="null" layoutX="391.0" layoutY="362.0" prefHeight="35.0" prefWidth="154.0">
               <items>
                 <Button id="null" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="1" />
