--- a/data/newpozadavek.fxml
+++ b/data/newpozadavek.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:controller="cz.vut.fit.ija21.controller.Controller" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="javafx:com.sun.javafx.tools.ant">
+<VBox fx:controller="cz.vut.fit.ija21.controller.newPozadavekController" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="javafx:com.sun.javafx.tools.ant">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="230.0" prefWidth="379.0" VBox.vgrow="ALWAYS">
          <children>
-            <ListView layoutX="14.0" layoutY="14.0" prefHeight="206.0" prefWidth="134.0" />
+            <ListView fx:id="goodsList" layoutX="14.0" layoutY="14.0" prefHeight="206.0" prefWidth="134.0" />
             <Button layoutX="276.0" layoutY="61.0" mnemonicParsing="false" text="Pridat" />
             <Button layoutX="216.0" layoutY="155.0" mnemonicParsing="false" text="Dokoncit" />
             <Label layoutX="165.0" layoutY="65.0" text="Mnozstvi:" />
